add audio toggle + build

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="loading" id="loading">Loading Shadow of the Beast...</div>
+    <button id="audioToggle" class="audio-toggle" style="display: none;">🔊</button>
     <script type="module" src="./src/main.js"></script>
 </body>
 </html>
